--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,34 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Mis discos
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-item style= background-color:#4381C1>
+      <img item-start src ="../assets/purpose.jpg" height= "130px"/>
+      <h2>Justin Bieber</h2>
+      <p style= color:black>Purpose</p>
+      <p style= color:black>2015</p>
+      <ion-row>
+        <ion-col>
+            <ion-icon name="star"></ion-icon>
+        </ion-col>
+        <ion-col>
+            <ion-icon name="star"></ion-icon>
+        </ion-col>
+        <ion-col>
+            <ion-icon name="star"></ion-icon>
+        </ion-col>
+        <ion-col>
+            <ion-icon name="star"></ion-icon>
+        </ion-col>
+        <ion-col>
+            <ion-icon name="star-half"></ion-icon>
+        </ion-col>
+      </ion-row>
+  </ion-item>
+
 </ion-content>
