--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,5 +30,28 @@
         </ion-col>
       </ion-row>
   </ion-item>
+  <ion-item style= background-color:#77567A>
+    <img item-start src ="../assets/shawn.jpg" height= "130px"/>
+    <h2>Shawn Mendes</h2>
+    <p style= color:black>Shawn Mendes</p>
+    <p style= color:black>2018</p>
+    <ion-row>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+    </ion-row>
+</ion-item>
 
 </ion-content>
