--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,10 +14,10 @@
       <p style= color:black>2015</p>
       <ion-row>
         <ion-col>
-            <ion-icon name="star"></ion-icon>
+            <ion-icon  name="star"></ion-icon>
         </ion-col>
         <ion-col>
-            <ion-icon name="star"></ion-icon>
+            <ion-icon  name="star"></ion-icon>
         </ion-col>
         <ion-col>
             <ion-icon name="star"></ion-icon>
@@ -52,6 +52,30 @@
       </ion-col>
       <ion-col>
           <ion-icon name="star"></ion-icon>
+      </ion-col>
+    </ion-row>
+</ion-item>
+
+<ion-item style= background-color:#8783D1>
+    <img item-start src ="../assets/v.jpg" height= "100px"/>
+    <h2>Maroon 5</h2>
+    <p style= color:black>V</p>
+    <p style= color:black>2014</p>
+    <ion-row>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star-half"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star-outline"></ion-icon>
       </ion-col>
     </ion-row>
 </ion-item>
