--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -80,4 +80,28 @@
     </ion-row>
 </ion-item>
 
+<ion-item style= background-color:#BEA2C2>
+    <img item-start src ="../assets/divide.jpg" height= "100px"/>
+    <h2>Ed sheeran</h2>
+    <p style= color:black>Divide</p>
+    <p style= color:black>2017</p>
+    <ion-row>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star-half"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+</ion-item>
+
 </ion-content>
