--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -104,4 +104,29 @@
     </ion-row>
 </ion-item>
 
+<ion-item style= background-color:#AA9ABA>
+    <img item-start src ="../assets/night.jpg" height= "100px"/>
+    <h2>Saturday Night Fever</h2>
+    <p style= color:black>Soundtrack</p>
+    <p style= color:black>1978</p>
+    <ion-row>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+      <ion-col>
+          <ion-icon name="star"></ion-icon>
+      </ion-col>
+    </ion-row>
+</ion-item>
+
+
 </ion-content>
