--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,11 @@
 
 <ion-content padding>
   <ion-item style= background-color:#4381C1>
-      <img item-start src ="../assets/purpose.jpg" height= "100px"/>
-      <h2>Justin Bieber</h2>
-      <p style= color:black>Purpose</p>
+      <img item-start (click)= "imagenn()" src ="../assets/purpose.jpg" height= "100px"/>
+      <h2 (click)= "nombree()" >Justin Bieber</h2>
+      <p style= color:black (click)= "albumm()">Purpose</p>
       <p style= color:black>2015</p>
-      <ion-row>
+      <ion-row (click)= "stars()">
         <ion-col>
             <ion-icon  name="star"></ion-icon>
         </ion-col>
