--- a/src/pages/disc1estrellas/disc1estrellas.html
+++ b/src/pages/disc1estrellas/disc1estrellas.html
@@ -14,5 +14,96 @@
 
 
 <ion-content padding>
+  <ion-card>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../assets/disc1/imag1.jpg">
+      </ion-avatar>
+      <h2>ARMR</h2>
+      <p>26 diciembre 2016 </p>
+    </ion-item>
+  
+    <ion-card-content>
+      <p>este disco muestra un cambio radical a lo que se venía escuchando de Bieber, no por algo fue considerado uno de los mejores discos del 2015.
+        excelente trabajo </p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>10 Likes</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>2 Comments</div>
+        </button>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
+  <ion-card>
+  
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../assets/disc1/imag2.png">
+      </ion-avatar>
+      <h2>Chio</h2>
+      <p>28 noviembre 2016 </p>
+    </ion-item>
+  
+    <ion-card-content>
+      <p>Para mí, un disco excelente. Se superó a sí mismo, y lo demuestra en su música. Lástima que muchos no lo vean de esa manera </p>
+  </ion-card-content>
+
+  <ion-row>
+    <ion-col>
+      <button ion-button icon-start clear small>
+        <ion-icon name="thumbs-up"></ion-icon>
+        <div>12 Likes</div>
+      </button>
+    </ion-col>
+    <ion-col>
+      <button ion-button icon-start clear small>
+        <ion-icon name="text"></ion-icon>
+        <div>5 Comments</div>
+      </button>
+    </ion-col>
+  </ion-row>
+
+</ion-card>
+<ion-card>
+
+  <ion-item>
+    <ion-avatar item-start>
+      <img src="../assets/disc1/imag2.png">
+    </ion-avatar>
+    <h2>Gina Königen</h2>
+    <p>10 mayo 2017 </p>
+  </ion-item>
+
+  <ion-card-content>
+    <p>un buen disco de moda, para regalarlo a adolescentes y adultos jóvenes. en general la mayoría de los temas son buenos. Creo es el mejor disco, en general, de esta estrella del pop.</p>
+  </ion-card-content>
+
+  <ion-row>
+    <ion-col>
+      <button ion-button icon-start clear small>
+        <ion-icon name="thumbs-up"></ion-icon>
+        <div>20 Likes</div>
+      </button>
+    </ion-col>
+    <ion-col>
+      <button ion-button icon-start clear small>
+        <ion-icon name="text"></ion-icon>
+        <div>1 Comments</div>
+      </button>
+    </ion-col>
+  </ion-row>
+
+</ion-card>
 
 </ion-content>
