--- a/src/pages/disc1estrellas/disc1estrellas.html
+++ b/src/pages/disc1estrellas/disc1estrellas.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>disc1estrellas</ion-title>
+    <ion-title>comentarios</ion-title>
   </ion-navbar>
 
 </ion-header>
