--- a/src/pages/disc1nombre/disc1nombre.html
+++ b/src/pages/disc1nombre/disc1nombre.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>disc1nombre</ion-title>
+    <ion-title>Justin Bieber</ion-title>
   </ion-navbar>
 
 </ion-header>
