--- a/src/pages/disc2estrellas/disc2estrellas.html
+++ b/src/pages/disc2estrellas/disc2estrellas.html
@@ -7,12 +7,106 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>disc2estrellas</ion-title>
+    <ion-title>Comentarios</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-card>
 
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../assets/disc1/imag3.jpg">
+      </ion-avatar>
+      <h2>Outta</h2>
+      <p>3 agosto 2018 </p>
+    </ion-item>
+  
+    <ion-card-content>
+      <p>I predict this guy is going to be a superstar if that is his goal. This is just one more great CD from Shawn. I can’t say there is a bad track to be found. I would like to see one of his shows but the pre-teens and teens buy the tickets up so fast.
+  
+  It appears John Mayer has taken an interest in his career and is helping him along. There are a couple tracks on this CD that could pass as John Mayer tunes. I have no problem with that.
+  
+  It’s good to see John paying it forward. Elton John promoted him. </p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>5 Likes</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>3 Comments</div>
+        </button>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
+  <ion-card>
+  
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../assets/disc1/imag4.jpg">
+      </ion-avatar>
+      <h2>Julie Johnson</h2>
+      <p>25 junio 2018 </p>
+    </ion-item>
+  
+    <ion-card-content>
+      <p>Great new music from Shawn Mendes. Vocal range is beautiful. </p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>10 Likes</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>3 Comments</div>
+        </button>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
+  <ion-card>
+  
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../assets/disc1/imag2.png">
+      </ion-avatar>
+      <h2>Steve</h2>
+      <p>30 septiembre 2018 </p>
+    </ion-item>
+  
+    <ion-card-content>
+      <p>The whole album is great! A true artist, down-to-earth natural, that loves what he does. I had to check out Shawn's previous albums too, also great! The track "Nervous" is my favorite. A clear vocal talent, captivating. I love the track lyrics - fun and poetic. Live performance of "Nervous" on James Corden is the BEST live performance by a solo artist I EVER saw! Looking forward to next album. "Bring It Shawn!".</p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="thumbs-up"></ion-icon>
+          <div>13 Likes</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-start clear small>
+          <ion-icon name="text"></ion-icon>
+          <div>3 Comments</div>
+        </button>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
+  
 </ion-content>
