--- a/src/pages/disc2nombre/disc2nombre.html
+++ b/src/pages/disc2nombre/disc2nombre.html
@@ -7,12 +7,19 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>disc2nombre</ion-title>
+    <ion-title>Shawn Mendes</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <img item-start src ="../assets/disc1/shawn.jpg" />
+  <p>Nació el 8 de agosto de 1998, en Toronto, Ontario, Canadá.
+    Hijo de Karen, agente de bienes raíces, y Manuel Mendes, hombre de negocios dedicado a la venta de suministros para bares y restaurantes en Toronto. Su progenitor es de ascendencia portuguesa, mientras que su madre es de origen inglés. Tiene una hermana llamada Aaliyah.
+    Fue criado en Pickering, un suburbio de Toronto y asistió a Pine Ridge School. Empezó a darse a conocer a mediados del año 2013 cuando comenzó a subir versiones de otras canciones en Vine recibiendo millones de visitas gracias a los seis segundos con fragmentos de interpretaciones de muchas canciones populares. En septiembre de ese mismo año, Shawn comenzó una gira junto a otros usuarios de Vine llamada MAGCON Tour.
+    Fue descubierto por Andrew Gertler y firmó con el sello discográfico Island Records, con el que lanzó en junio de 2014 su primer sencillo, Life Of The Party, logrando entrar entre los treinta primeros de las listas de Canadá, Estados Unidos y Nueva Zelanda, además de haber sido certificado con discos de oro y platino. Realizó una gira por Canadá como telonero de su compatriota Austin Mahone y conquistó el Teen Choice Award en 2014 como Mejor estrella musical de la web.
+    Su primer álbum de estudio, Handwritten, hizo su debut en el número uno en Canadá y Estados Unidos, además de entrar entre los veinte primeros en Australia, Irlanda, Nueva Zelanda y el Reino Unido.
+    Se convirtió en el artista más joven en debutar en el top 25 con una canción debut en el Billboard Hot 100, con el número 24 en la semana que terminó el 12 de julio 2014; tenía 15 años, 11 meses y 4 días de edad.
+    </p>
 </ion-content>
