--- a/src/pages/disc2album/disc2album.html
+++ b/src/pages/disc2album/disc2album.html
@@ -14,5 +14,5 @@
 
 
 <ion-content padding>
-  <ion-label *ngFor = "let t of track">{{t}}</ion-label> 
+  <ion-label *ngFor = "let r of rack">{{r}}</ion-label> 
 </ion-content>
