--- a/src/pages/disc3nombre/disc3nombre.html
+++ b/src/pages/disc3nombre/disc3nombre.html
@@ -7,12 +7,16 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>disc3nombre</ion-title>
+    <ion-title>Maroon 5</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+    <img item-start src ="../assets/disc1/maroon.jpeg" />
+    <p>Banda de rock, formada en Los Angeles, California, ganadora de los Grammy y otros premios por su albúm debut Songs About Jane, publicado en junio del 2002, el albúm gozó de mucho éxito, con oro, platino, y triple platino en varios paises alrededor del mundo. Su siguiente albúm acústico 1.22.03.Acoustic, en el cual incluyeron canciones en vivo del albúm Songs About Jane, también alcanzó el platino. El grupo ganó el premio Grammy por Mejor Artista Revelación en el 2005. Terminando el 2005 publicaron un disco con canciones en vivo llamado Live - Friday The 13th el cual fue grabado en mayo del 2005 en Santa Barbara, California por el cual ganaron el premio Grammy por Mejor Performance Pop por un Dúo o Grupo con Vocal en el 2006.
+        Esta formada por cuatro miembros (Adam, Jesse, Mickey, y Ryan) los cuales se conocieron en el instituto Brentwood High School en Los Angeles, para luego formar Kara's Flowers una banda de garage/grunge que tuvo su primera presentación en el Whisky a go-go el 16 de septiembre de 1995 (Adam Levine cantaba con una profunda voz de "grunge" en ese tiempo).
+        La banda firmó un contrato con Reprise Records mientras aún estaban en la escuela preparatoria y lanzaron su único álbum The Fourth World a mediados de 1997 solo tres de los cuatro miembros estaban cerca de graduarse (Ryan Dusick quien estaba completando su segundo año en la UCLA). hicieron un vídeo para la canción de apertura "Soap Disco", pero este no tuvo éxito en MTV. A pesar de ser los teloneros en tures con Reel Big Fish y Goldfinger el álbum fracaso al salir al mercado en 1999 la banda se separó de Reprise Records. (Debido a su próxima popularidad de Maroon 5, más copias de The Fourth World se vendieron después del lanzamiento de Songs About Jane que durante los años anteriores). Luego de ser lanzado por Reprise Records, los cuatro jóvenes asistieron a diferentes universidades de Estados Unidos. Ellos descubrieron nuevos estilos musicales y desarrollaron un amor por Motown, pop, R&B, soul, y el gospel, experiencias que influenciaron mucho el estilo y sonido de Maroon 5. Los cuatro miembros originales de Kara's Flowers permanecieron en contacto y empezaron a tocar juntos de nuevo en el 2001. Jesse Carmichael cambio de la guitarra a los teclados así que surgió un problema por la necesidad de un guitarrista adicional. James Valentine, anteriormente de la banda Square, se les unió para llenar ese vacío. La banda firmó con Octone Records, un sello discográfico independiente en New York, con distribución por medio de BMG y un trato con un artista perfeccionado con Clive Davis' J Records.
+        </p>
 </ion-content>
