--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -81,11 +81,11 @@
 </ion-item>
 
 <ion-item style= background-color:#BEA2C2>
-    <img item-start src ="../assets/divide.jpg" height= "100px"/>
-    <h2>Ed sheeran</h2>
-    <p style= color:black>Divide</p>
+    <img item-start  (click)= "imagen4()" src ="../assets/divide.jpg" height= "100px"/>
+    <h2 (click)= "nombre4()">Ed sheeran</h2>
+    <p style= color:black (click)= "album4()">Divide</p>
     <p style= color:black>2017</p>
-    <ion-row>
+    <ion-row (click)= "stars4()">
       <ion-col>
           <ion-icon name="star"></ion-icon>
       </ion-col>
