--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -105,11 +105,11 @@
 </ion-item>
 
 <ion-item style= background-color:#AA9ABA>
-    <img item-start src ="../assets/night.jpg" height= "100px"/>
-    <h2>Saturday Night Fever</h2>
-    <p style= color:black>Soundtrack</p>
+    <img item-start  (click)= "imagen5()"  src ="../assets/night.jpg" height= "100px"/>
+    <h2 (click)= "nombre5()">Saturday Night Fever</h2>
+    <p style= color:black (click)= "album5()">Soundtrack</p>
     <p style= color:black>1978</p>
-    <ion-row>
+    <ion-row  (click)= "stars5()">
       <ion-col>
           <ion-icon name="star"></ion-icon>
       </ion-col>
