--- a/src/pages/disc1nombre/disc1nombre.html
+++ b/src/pages/disc1nombre/disc1nombre.html
@@ -13,10 +13,10 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#253C78>
   <img item-start src ="../assets/disc1/justin.jpg" />
   <p>(Justin Drew Bieber; Ontario, 1994) Cantante de pop canadiense cuya todavía incipiente carrera musical se vio tempranamente reconocida con el premio MTV al mejor artista revelación, que le fue concedido en septiembre de 2010. Por esas mismas fechas, el número de sus seguidores en Facebook ascendía a trece millones. Y es que el jovencísimo artista, que cumplió 16 años el 1 de marzo de 2010, había conseguido en apenas dos años formar una auténtica legión de seguidores en todo el mundo y batir récords de ventas hasta ahora impensables para un músico debutante. 
     Hijo de Pattie Mallette, mujer de profundas convicciones religiones que hubo de educarle sin apoyo paterno, el pequeño Justin mostró precozmente sus aptitudes para la música: con doce años obtuvo el segundo premio en un concurso local de canto celebrado en Stratford. Poco después, su madre tuvo la idea de filmar sus interpretaciones y colgarlas en YouTube. Por entonces, naturalmente, Justin Bieber carecía de repertorio propio, y cantaba temas célebres de algunos de sus artistas preferidos, como Chris Brown, Stevie Wonder, Justin Timberlake y Usher.
     Puede decirse que Justin Bieber es otro caso emblemático de las nuevas generaciones de artistas que surgen con y gracias a Internet y a la vorágine global de las redes sociales y del boca a boca electrónico. Por sus vídeos en YouTube fue descubierto casualmente por Scooter Braun (copropietario con Usher de la compañía RBMG), quien rápidamente se puso en contacto con Pattie Mallette y le hizo ver el enorme potencial de su hijo. Justin efectuó una grabación en Atlanta y poco después despertó el interés del mismísimo Usher. De la mano del rapero, Bieber fichó por la RBMG y la discográfica Island Records en octubre de 2008, y, junto con su madre, se instaló en Atlanta. El éxito fue a partir de entonces fulgurante. 
-    </p>
+    https://www.biografiasyvidas.com/biografia/b/bieber.htm</p>
 </ion-content>
