--- a/src/pages/disc2album/disc2album.html
+++ b/src/pages/disc2album/disc2album.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#C8B8DB>
   <ion-label *ngFor = "let r of rack">{{r}}</ion-label> 
 </ion-content>
