--- a/src/pages/disc3album/disc3album.html
+++ b/src/pages/disc3album/disc3album.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#95B8D1>
   <ion-label *ngFor = "let a of ack">{{a}}</ion-label> 
 </ion-content>
