--- a/src/pages/disc3imagen/disc3imagen.html
+++ b/src/pages/disc3imagen/disc3imagen.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#95B8D1>
     <img src ="../assets/v.jpg">
 </ion-content>
