--- a/src/pages/disc4imagen/disc4imagen.html
+++ b/src/pages/disc4imagen/disc4imagen.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#C76D7E>
   <img src ="../assets/divide.jpg">
 </ion-content>
