--- a/src/pages/disc4nombre/disc4nombre.html
+++ b/src/pages/disc4nombre/disc4nombre.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#C76D7E>
   <img item-start src ="../assets/disc1/ed.jpg" height= "200px"/>
   <p>Nació el 17 de febrero de 1991 en Halifax, West Yorkshire.
 
@@ -23,5 +23,5 @@
     Tras mudarse a Londres en 2008, empezó a dar conciertos en pequeñas salas. Allí publicó videos en YouTube de su cuarto trabajo, You Need Me, I Don't Need You, y Jamie Foxx lo invitó a participar en su programa de radio. En 2010 publicó el EP Let It Out. A primeros de 2011 lanzó No. 5 Collaborations Project, el último como artista independiente, con el que vendió siete mil copias en el Reino Unido. Loose Change fue uno de los EP lanzados bajo la firma de Atlantic Records.
     Firmó con la discográfica Asylum Records, con la que llegó a grabar su primer álbum de estudio llamado+, que fue lanzado el 9 de septiembre de 2011, con él consiguió siete discos de platino en su país. El primer sencillo fue The A Team., tema que interpretó junto a Elton John en los Grammys de 2013.
     Su música se caracterizaba por mezclar estilos musicales, hip hop, pop rock, acústico, folk e indie. En 2012 ganó el premio al Mejor Solista Masculino Británico y al Artista Revelación Británico de los Brit Awards.
-    </p>
+    https://www.buscabiografias.com/biografia/verDetalle/10192/Ed%20Sheeran</p>
 </ion-content>
