--- a/src/pages/disc5nombre/disc5nombre.html
+++ b/src/pages/disc5nombre/disc5nombre.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#BFD0E0>
   <img item-start src ="../assets/disc1/imag8.jpg" />
   <p>Bee Gees es un grupo de origen británico compuesto por tres hermanos: Barry, nacido en 1946 y los gemelos Robin y Maurice, nacidos en 1949.
 
@@ -23,5 +23,5 @@
     Después de mudarse a Miami y contactar con el productor Arif Mardin, los Bee Gees comienzan su etapa americana con el disco 'Mr Natural', en 1974 y 'Main Course', un año después. Su estilo evoluciona desde la canción romántica y sentimental hasta el Rhym & Blues.
     Poco después se pasan a la música disco, anticipándose a lo que luego sería la moda. Editan 'Children Of The World', consiguiendo el número uno con la canción 'You Should Be Dancing'.
     En 1977 llegó su mayor éxito a nivel mundial y el más vendido: 'Saturday Night Fever', el disco de la película del mismo título.
-    </p>
+    https://www.todomusica.org/bee_gees/</p>
 </ion-content>
