--- a/src/pages/disc1album/disc1album.html
+++ b/src/pages/disc1album/disc1album.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#253C78>
   <ion-list>
     <ion-label *ngFor = "let t of track">{{t}}</ion-label> 
   </ion-list>
