--- a/src/pages/disc2imagen/disc2imagen.html
+++ b/src/pages/disc2imagen/disc2imagen.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#C8B8DB>
   <img src ="../assets/shawn.jpg">
 </ion-content>
