--- a/src/pages/disc3estrellas/disc3estrellas.html
+++ b/src/pages/disc3estrellas/disc3estrellas.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#95B8D1>
   <ion-card>
   <ion-item>
     <ion-avatar item-start>
