--- a/src/pages/disc4album/disc4album.html
+++ b/src/pages/disc4album/disc4album.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#C76D7E>
     <ion-label *ngFor = "let c of ck">{{c}}</ion-label> 
 </ion-content>
