--- a/src/pages/disc5album/disc5album.html
+++ b/src/pages/disc5album/disc5album.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#BFD0E0>
   <ion-label *ngFor = "let k of ka">{{k}}</ion-label> 
 </ion-content>
