--- a/src/pages/disc5imagen/disc5imagen.html
+++ b/src/pages/disc5imagen/disc5imagen.html
@@ -13,6 +13,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style=background-color:#BFD0E0>
   <img src ="../assets/night.jpg">
 </ion-content>
